--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,11 @@
 <h1>StaticPages#home</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
+
+<% @towns.each do |town| %>
+<li>
+  <%= town.name%>
+  <% town.weather.each do |w| %>
+    <%= w.min_temp %>
+  <% end %>
+</li>
+<% end %>
